Fixed image scaling on narrow screens

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 img {
+    width: auto !important;
     max-width: 100%;
 }
 
